# RotorTM

./: README.md
rotor_tm_config/: package.xml  setup.cfg  setup.py
rotor_tm_config/config/control_params/: payload_nmpc_params.yaml  pointmass_cable_gains.yaml
rotor_tm_config/config/load_params/: fedex_box_payload.yaml  long_bar_wood_payload.yaml  pointmass_payload.yaml  triangular_payload.yaml
rotor_tm_config/config/uav_params/: race.yaml  snapdragonfly.yaml  snapdragonfly_bullnose_prop.yaml
rotor_tm_control/: package.xml  setup.cfg  setup.py
rotor_tm_control/rotor_tm_control/: controller.py  controller_node.py  temp.py
rotor_tm_keyboard2wrench/: package.xml  setup.cfg  setup.py
rotor_tm_keyboard2wrench/rotor_tm_keyboard2wrench/: ext_wrench_sub.py  keyboard2wrench.py
rotor_tm_msgs/: CMakeLists.txt  package.xml
rotor_tm_msgs/constants/: constants.cpp
rotor_tm_msgs/msg/: CenPLCommand.msg  FMCommand.msg  FMNCommand.msg  PositionCommand.msg  RPMCommand.msg  SO3Command.msg  StatusData.msg  TRPYCommand.msg  TrajCommand.msg
rotor_tm_msgs/srv/: Circle.srv  CircleWithRotation.srv
rotor_tm_plcontrol/: CMakeLists.txt  build.sh  package.xml
rotor_tm_plcontrol/config/: path_config.yaml
rotor_tm_plcontrol/config/load_params/: fedex_box_payload.yaml  triangular_payload.yaml
rotor_tm_plcontrol/config/uav_params/: hummingbird.yaml
rotor_tm_plcontrol/include/rotor_tm_plcontrol/: nmpc_control.h  payload_model_model.h  wrapper.h
rotor_tm_plcontrol/scripts/: acados_ocp_payload_model.json  constraints.py  cost_functions.py  payload_controller.py  payload_model.py  read_params.py  utils.py
rotor_tm_plcontrol/scripts/c_generated_code/: Makefile  acados_sim_solver_payload_model.c  acados_sim_solver_payload_model.h  acados_solver.pxd  acados_solver_payload_model.c  acados_solver_payload_model.h  main_payload_model.c  main_sim_payload_model.c
rotor_tm_plcontrol/scripts/c_generated_code/payload_model_cost/: payload_model_cost.h  payload_model_cost_ext_cost_0_fun.c  payload_model_cost_ext_cost_0_fun_jac.c  payload_model_cost_ext_cost_0_fun_jac_hess.c  payload_model_cost_ext_cost_e_fun.c  payload_model_cost_ext_cost_e_fun_jac.c  payload_model_cost_ext_cost_e_fun_jac_hess.c  payload_model_cost_ext_cost_fun.c  payload_model_cost_ext_cost_fun_jac.c  payload_model_cost_ext_cost_fun_jac_hess.c
rotor_tm_plcontrol/scripts/c_generated_code/payload_model_model/: payload_model_expl_ode_fun.c  payload_model_expl_ode_hess.c  payload_model_expl_vde_adj.c  payload_model_expl_vde_forw.c
rotor_tm_plcontrol/src/: nmpc_control.cpp  pl_nmpc_controller_node.cpp  solver.cpp  utils.hpp  wrapper.cpp
rotor_tm_sim/: package.xml  setup.cfg  setup.py
rotor_tm_sim/launch/: controller_launcher.py  editable_launch.py  rotortm_single_controller_node.py  rviz.py  rviz_config.rviz2  rviz_config_ukf_vio.rviz2  sim_launch.py
rotor_tm_sim/rotor_tm_sim/: data_saver_node.py  plot_graphs.py  runsim.py  sim_utils.py  simulation_base.py
rotor_tm_traj/: package.xml  setup.cfg  setup.py
rotor_tm_traj/rotor_tm_traj/: traj.py  traj_node.py
rotor_tm_utils/: package.xml  setup.cfg  setup.py
rotor_tm_utils/rotor_tm_utils/: CaQuatToRot .py  QuatToYPR.py  read_params.py  rosutilslib.py
