<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rotor_tm_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="swatishirke.shirke88@gmail.com">swati</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Build dependencies -->
  <build_depend>roclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <depend>rotor_tm_msgs</depend>
  <depend>rotor_tm_utils</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
