<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rotor_tm_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="swatishirke.shirke88@gmail.com">swati</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  

  <depend>rotor_tm_config</depend>
  <depend>rotor_tm_utils</depend>
  <depend>rotor_tm_msgs</depend>
  
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <test_depend>python3-pytest</test_depend>
  <depend>python3-setuptools</depend>
  <exec_depend>Optimization</exec_depend>
  

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
